--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
         <script type="module" src="/src/main.ts"></script>
     </head>
     <body>
-        <div class="toolbar">
-            <div class="tool"></div>
-            <div class="tool tool-selected"></div>
-            <div class="tool"></div>
-            <div class="tool"></div>
-        </div>
+        <div id="toolbar" class="toolbar"></div>
         <div class="canvas-wrapper">
             <canvas id="canvas" width="500" height="500"></canvas>
         </div>
